--- a/slyle.css
+++ b/slyle.css
@@ -12,7 +12,7 @@ body {
     text-align: center;
   }
   
-  img {
+  download.jpeg {
     max-width: 100%;
     height: auto;
     display: inline-block;
