--- a/slyle.css
+++ b/slyle.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 20px;
+    background-color: #808080;
   }
   
   header {
@@ -12,7 +13,7 @@ body {
     text-align: center;
   }
   
-  download.jpeg {
+  img {
     max-width: 100%;
     height: auto;
     display: inline-block;
